--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
     "    names = name.split(' ')\n",
     "    first_name = names[0]\n",
     "    last_name = names[1]\n",
-    "    return first_name[0] + last_name[0]"
+    "    return first_name[0] + '.' + last_name[0] + '.'"
    ]
   },
   {
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "'HS'"
+       "'H.S.'"
       ]
      },
      "execution_count": 7,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "['HS', 'MS', 'BS', 'MS', 'LS']"
+       "['H.S.', 'M.S.', 'B.S.', 'M.S.', 'L.S.']"
       ]
      },
      "execution_count": 8,
@@ -280,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10eda6860>"
+       "<map at 0x7f52c46300b8>"
       ]
      },
      "execution_count": 9,
@@ -338,7 +338,7 @@
     {
      "data": {
       "text/plain": [
-       "['HS', 'MS', 'BS', 'MS', 'LS']"
+       "['H.S.', 'M.S.', 'B.S.', 'M.S.', 'L.S.']"
       ]
      },
      "execution_count": 11,
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "[8, 1024, 2097152]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,6 +440,13 @@
    "source": [
     "In this section, we learned about the `map` function which takes in two arguments. The first argument is the altering function, which operates on each element by passing through the element as an argument and returning a value. The second argument is the list of elements to be iterated through and operated on. The return values of the altering function are appended to a new list, which is returned after we coerce our map object into a list."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -458,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
